--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   rxdart: ^0.23.1
-  dio: ^3.0.8
+  dio: ^3.0.9
   path_provider: 0.4.1
   barcode_scan: ^3.0.1
   qr_flutter: ^1.1.1
+  shared_preferences: ^0.5.7+3
+  fluttertoast: ^4.0.1
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
