--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^0.5.7+3
   fluttertoast: ^4.0.1
   http: ^0.12.0+4
+  provider: ^4.1.3
 
 dev_dependencies:
   flutter_test:
