--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   rxdart: ^0.23.1
   dio: ^3.0.9
-  path_provider: 0.4.1
+  path_provider: ^0.4.1
   barcode_scan: ^3.0.1
   qr_flutter: ^1.1.1
   shared_preferences: ^0.5.7+3
@@ -40,6 +40,7 @@ dependencies:
   provider: ^4.1.3
   load: ^0.1.6
   intl: ^0.16.1
+  flutter_html: ^1.0.0-pre.1
 
 
 dev_dependencies:
